--- a/news_app/templates/primary/news.html
+++ b/news_app/templates/primary/news.html
@@ -1,10 +1,12 @@
 {% extends '../base.html' %} {% load static %} {% block content %}
 <div class="container">
-  <a onclick="javascript:history.back();return false;" class="btn_back">Back</a>
+  <a onclick="javascript:history.back();return false;" class="btn_back"><i class="fa-solid fa-arrow-left"></i></a>
   <div class="room-row">
     {% if latest_news %} {% for i in latest_news %}
     <div class="card">
-      <img class="img" src="{{ i.image }}" alt="icon" />
+      <div class="img">
+        <img src="{{ i.image }}" alt="icon" />
+      </div>
       <h1 class="head">{{ i.title }}</h1>
       <div class="card-details">
         <p class="news-date">{{ i.created_at }}</p>
