--- a/news_app/templates/primary/news_detail.html
+++ b/news_app/templates/primary/news_detail.html
@@ -1,6 +1,6 @@
 {% extends '../base.html' %} {% load static %} {% block content %}
 
-<a onclick="javascript:history.back();return false;" class="btn_back">Back</a>
+<a onclick="javascript:history.back();return false;" class="btn_back"><i class="fa-solid fa-arrow-left"></i></a>
 <div class="container">
   <div class="news-detail">
     <img class="img-news-details" src="{{ news.image }}" alt="icon" />
