--- a/news_app/templates/base.html
+++ b/news_app/templates/base.html
@@ -7,6 +7,7 @@
     <title>Site</title>
 
     <link rel="stylesheet" href="{% static './css/style.css' %}" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   </head>
   <body>
     <header class="header">
@@ -31,7 +32,21 @@
               <a href="{% url 'about_page' %}" class="nav-link">About</a>
             </li>
           </ul>
+          <button id="menu-btn" onclick="toggleMenu()"><i class="fa-solid fa-bars"></i></button>
         </div>
+      </div>
+      <div id="menuList" class="container" style="display: none;">
+        <ul class="mobile-menu">
+          <li class="menu-list">
+            <a href="{% url 'home_page' %}" class="nav-link">Home</a>
+          </li>
+          <li class="menu-list">
+            <a href="{% url 'news_page' %}" class="nav-link">News</a>
+          </li>
+          <li class="menu-list">
+            <a href="{% url 'about_page' %}" class="nav-link">About</a>
+          </li>
+        </ul>
       </div>
     </header>
 
@@ -40,5 +55,7 @@
     <footer class="footer">
       <div class="container">&copy; 20020202020020202. Shampoo ehehehe</div>
     </footer>
+
+    <script src="{% static './js/main.js' %}"></script>
   </body>
 </html>
