--- a/news_app/static/css/style.css
+++ b/news_app/static/css/style.css
@@ -256,6 +256,7 @@
   display: block;
   text-align: center;
   margin-top: 20px;
+  align-items: center;
 }
 
 .img-news-details {
@@ -273,7 +274,6 @@
 .news-text {
   font-size: 20px;
   margin-bottom: 10px;
-  margin: 0 400px;
   font-weight: 400;
   word-wrap: break-word;
 }
@@ -335,7 +335,6 @@
 
   .news-text {
     text-align: center;
-    margin: 0 20px;
   }
 }
 
