--- a/news_app/static/css/style.css
+++ b/news_app/static/css/style.css
@@ -260,10 +260,10 @@
 }
 
 .img-news-details {
-  width: 400px;
-  height: 400px;
+  width: 80%;
+  height: auto;
   object-fit: cover;
-}
+} 
 
 .news-date {
   font-size: 18px;
@@ -328,18 +328,13 @@
     flex-direction: column;
   }
 
-  .img-news-details {
-    width: 500px;
-    height: 500px;
-  }
-
   .news-text {
     text-align: center;
   }
 
   .img img {
-    width: 200px;
-    height: 200px;
+    width: 100%;
+    height: auto;
   }
 }
 
