--- a/news_app/templates/base.html
+++ b/news_app/templates/base.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Site</title>
+    <title>Meme News</title>
     <link rel="icon" type="image/x-icon" href="{% static './images/df.png' %}">
 
     <link rel="stylesheet" href="{% static './css/style.css' %}" />
